# cmake_sample

./: .gitignore  CMakeLists.txt
include/: my_library.hpp
src/: main.cpp  my_library.cpp
